...
      selectedIcon: Icon(Icons.calendar_today),
      label: 'Plans',
    ),
    NavigationDestination(
      icon: Icon(Icons.timer_outlined),
      selectedIcon: Icon(Icons.timer),
      label: 'Workout',
    ),
    NavigationDestination(
      icon: Icon(Icons.show_chart_outlined),
      selectedIcon: Icon(Icons.show_chart),
      label: 'Progress',
    ),
  ];

  @override
  Widget build(BuildContext context) {
    return Scaffold(
...
